# ds-stoa

./: Dockerfile  Pipfile  PyPI.md  README.md  build.sh  pyproject.toml
.github/workflows/: deploy.yml  deploy_test.yml  docs.yml  security.yml  styling.yml  test.yml
docs/source/: conf.py  index.rst
src/ds_stoa/: __init__.py  main.py
src/ds_stoa/authentication/: __init__.py  _oauth2.py  _rest.py
src/ds_stoa/fetch/: __init__.py  _fetch.py
src/ds_stoa/manager/: __init__.py  client.py
src/ds_stoa/order/: __init__.py  _order.py
src/ds_stoa/sign/: __init__.py  _sign.py
src/ds_stoa/utils/: __init__.py
src/ds_stoa/utils/decorators/: __init__.py  authentication.py
src/ds_stoa/utils/exceptions/: __init__.py  _handler.py
src/ds_stoa/utils/logger/: __init__.py  _context.py  _logger.py
tests/: test_main.py
tests/authenticate/: test_oauth2.py  test_rest.py
tests/fetch/: test_fetch.py
tests/manager/: test_client.py
tests/order/: test_order.py
tests/sign/: test_sign.py
